@@ -36,6 +36,7 @@ use Dancer::Continuation::Route::FileSent;
 use Dancer::Continuation::Route::Templated;
 
 use File::Spec;
+use Scalar::Util;
 
 use base 'Exporter';
 
@@ -378,6 +379,11 @@ sub _send_file {
 
     if (exists($options{content_type})) {
         $request->content_type($options{content_type});
+    }
+
+    # If we're given an IO::Scalar object, DTRT (take the scalar ref from it)
+    if (Scalar::Util::blessed($path) && $path->isa('IO::Scalar')) {
+        $path = $path->sref;
     }
 
     my $resp;
